# qolor

./: CMakeLists.txt  Doxyfile
cmake/: clean-cmake-files.cmake
include/: CMakeLists.txt
include/qolor/: CMakeLists.txt  all.hpp  basic_iterable.h  debug.h  delimited_text_driver.h  function_driver.h  functional_traits.hpp  iterable_traits.hpp  iterator_utilities.hpp  join_iterator.hpp  predicate_iterator.hpp  range_driver.h  select_iterator.hpp  sqlite3_driver.h  sqlite3_driver_with_rows.h  step_iterator.h  synchronized_iterator.hpp  utilities.h  version.h.in
src/: CMakeLists.txt  sqlite3pp.cpp  utilities.cpp
test/: CMakeLists.txt  dijkstra.cpp  dijkstra.csv  foods.db  functional_traits.cpp  projecteuler1.cpp  projecteuler2.cpp  projecteuler8.cpp  sqlite3_attach.cpp  sqlite3_callback.cpp  sqlite3_disconnect.cpp  sqlite3_insert.cpp  sqlite3_insertall.cpp  sqlite3_select.cpp  testfn.h  types.cpp
